--- a/html-css/Caracteristicas do CSS/Herança/herança.html
+++ b/html-css/Caracteristicas do CSS/Herança/herança.html
@@ -5,10 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Herança</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <div class="container">
+    Este é um texto aleatório para <span>exemplificar</span> as heranças no CSS.
 
+  </div>
 </body>
 
 </html>
