--- a/html-css/Caracteristicas do CSS/Inherit/inherit.html
+++ b/html-css/Caracteristicas do CSS/Inherit/inherit.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>O inherit</title>
   <style>
     body {
@@ -22,7 +22,7 @@
 
     .box h1 {
       font-size: inherit;
-      color: inherit;
+      color: inher;
     }
   </style>
 </head>
