--- a/html-css/Responsividade/Função Calc/funcao-calc.html
+++ b/html-css/Responsividade/Função Calc/funcao-calc.html
@@ -12,6 +12,7 @@
 
     .container {
       width: calc(100% - 20px);
+      margin: auto;
       height: 200px;
       background-color: #eee;
     }
