--- a/html-css/Projetos/Tela login/index.html
+++ b/html-css/Projetos/Tela login/index.html
@@ -29,7 +29,7 @@
             <input type="password" name="password" id="password" placeholder="Digite uma senha" required>
           </label>
         </legend>
-        <input type="button" id="btn" value="login">
+        <input type="button" id="btn" value="Cadastrar">
       </form>
     </div>
   </div>
