--- a/html-css/Projetos/Tela login/index.html
+++ b/html-css/Projetos/Tela login/index.html
@@ -21,13 +21,15 @@
         <legend>
           <h3>Usuário</h3>
           <label for="user">
-            <input type="text" name="user" id="user" placeholder="Escolha seu Usuário" required>
+            <input type="text" name="user" id="user" placeholder="Escolha seu Usuário" required autofocus maxlength="8"
+              autocomplete="off" spellcheck="false" autocorrect="off" autocapitalize="none">
           </label>
         </legend>
         <legend>
           <h3>Senha</h3>
           <label for="password">
-            <input type="password" name="password" id="password" placeholder="Digite uma senha" required>
+            <input type="password" name="password" id="password" placeholder="Digite uma senha" required maxlength="8"
+              autocomplete="off" spellcheck="false" autocorrect="off" autocapitalize="none">
           </label>
         </legend>
         <input type="button" id="btn" value="Cadastrar">
