--- a/html-css/Semântica e CSS avançado/Not Hover/not-hover.html
+++ b/html-css/Semântica e CSS avançado/Not Hover/not-hover.html
@@ -50,19 +50,19 @@
     <h1>Quem está assistindo?</h1>
   </div>
   <div class="user">
-    <div class="select"><img src="image/1.png" alt="">
+    <div class="select"><img src="image/1.png" alt="Foto do Perfil 1">
       <h2>Perfil 1</h2>
     </div>
-    <div class="select"><img src="image/2.png" alt="">
+    <div class="select"><img src="image/2.png" alt="Foto do Perfil 2">
       <h2>Perfil 2</h2>
     </div>
-    <div class="select"><img src="image/3.png" alt="">
+    <div class="select"><img src="image/3.png" alt="Foto do Perfil 3">
       <h2>Perfil 3</h2>
     </div>
-    <div class="select"><img src="image/4.png" alt="">
+    <div class="select"><img src="image/4.png" alt="Foto do Perfil 4">
       <h2>Perfil 4</h2>
     </div>
-    <div class="select"><img src="image/5.png" alt="">
+    <div class="select"><img src="image/5.png" alt="Botão criar Novo perfil">
       <h2>Adicionar Perfil</h2>
     </div>
   </div>
