--- a/html-css/CSS Grid/Container e Item/index.html
+++ b/html-css/CSS Grid/Container e Item/index.html
@@ -7,11 +7,16 @@
   <title>Css Grid</title>
   <style>
     body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
       font-family: Arial, Helvetica, sans-serif;
       overflow: hidden;
+      height: 100vh;
+      width: 100vw;
     }
 
     .container {
@@ -27,9 +32,6 @@
       grid-gap: 10px;
       gap: 10px;
       /* end shorthand */
-      width: 100vw;
-      margin: 10px;
-      background-color: gray;
     }
 
     .item {
@@ -46,14 +48,30 @@
     .item:hover {
       background-color: red;
     }
+
+    .item1,
+    .item9 {
+      grid-column-start: 1;
+      grid-column-end: 4;
+    }
+
+    .item3 {
+      grid-column: 2/4;
+      grid-row: 2/4;
+    }
+
+    .item6 {
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
   </style>
 </head>
 
 <body>
   <div class="container">
-    <div class="item">1</div>
+    <div class="item item1">1</div>
     <div class="item">2</div>
-    <div class="item">3</div>
+    <div class="item item3">3</div>
     <div class="item">4</div>
     <!-- <div class="item">
       5 <br>
@@ -67,10 +85,10 @@
       Lorem ipsum dolor sit. <br>
       Lorem ipsum dolor sit. <br>
     </div> -->
-    <div class="item">6</div>
+    <div class="item item6">6</div>
     <div class="item">7</div>
-    <div class="item">8</div>
-    <div class="item">9</div>
+    <!-- <div class="item">8</div> -->
+    <div class="item item9">9</div>
   </div>
 </body>
 
