--- a/html-css/CSS Grid/Container e Item/index.html
+++ b/html-css/CSS Grid/Container e Item/index.html
@@ -64,6 +64,18 @@
       grid-column-start: 1;
       grid-column-end: 3;
     }
+
+    /* 
+    Shorthand Grid Area
+
+      grid-row-start
+      grid-column-start
+      grid-row-end
+      grid-column-end
+    
+
+      grid-area: 1 / 2 / 1 /4;
+    */
   </style>
 </head>
 
