--- a/JavaScript/Eventos e Manipulação de DOM/Manipulando elementos 2/index.html
+++ b/JavaScript/Eventos e Manipulação de DOM/Manipulando elementos 2/index.html
@@ -18,6 +18,15 @@
     </ul>
   </div>
 
+
+  <div class="teste2">
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
+  </div>
+
   <button class="botao" onclick="clicou()">Clique em mim</button>
 
   <script src="index.js"></script>
