--- a/JavaScript/Objetos e Orientação a Objetos/Classe Getter e Setter/index.html
+++ b/JavaScript/Objetos e Orientação a Objetos/Classe Getter e Setter/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Classes JS</title>
+  <title>Classe Getter e Setter</title>
 </head>
 
 <body>
