--- a/JavaScript/Requisições/Erros na promise/index.html
+++ b/JavaScript/Requisições/Erros na promise/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Erros na promise</h1>
     <button id="button">Carregar primeiro post</button>
+    <button id="inserir">Inserir um Post</button>
     <script src="script.js"></script>
 </body>
 </html>
