--- a/JavaScript/Requisições/Promises com async e await/index.html
+++ b/JavaScript/Requisições/Promises com async e await/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promise com Async e Await</title>
 </head>
+<style>
+    .teste {
+        background-color: black;
+    }
+</style>
 <body>
     <h1>Promise com Async e Await</h1>
-    <button id="btn">Clique aqui</button>
-    <button id="inserir">Inserir novo Post</button>
+    <button class="teste" id="btn">Clique aqui</button>
+    <button class="teste" id="inserir">Inserir novo Post</button>
     <script src="script.js"></script>
 </body>
 </html>
