--- a/TailwindCSS/MontandoSetup/src/index.html
+++ b/TailwindCSS/MontandoSetup/src/index.html
@@ -15,7 +15,7 @@
   <div class="bg-blue-600 w-2/3 h-36 text-white text-center">2</div>
   <div class="bg-blue-600 w-full h-36 text-white text-center">3</div>
   <div class="w-screen bg-green-400 h-8">
-    <div class="max-w-sm bg-gray-600 text-cyan-50">testando o SM</div>
+    <div class="max-w-sm bg-white text-slate-200">testando o SM</div>
   </div>
 </body>
 </html>
