--- a/TailwindCSS/GridCSS/index.html
+++ b/TailwindCSS/GridCSS/index.html
@@ -7,6 +7,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <div class="grid grid-cols-3 gap-3 m-4">
+        <div class="col-span-full rounded-md bg-blue-500 text-white p-4">01</div>
+        <div class="col-span-2 rounded-md bg-blue-500 text-white p-4">02</div>
+        <div class="rounded-md bg-blue-500 text-white p-4">03</div>
+        <div class="row-span-2 rounded-md bg-blue-500 text-white p-4">04</div>
+        <div class="col-start-2 col-end-4 rounded-md bg-blue-500 text-white p-4">05</div>
+        <div class="rounded-md bg-blue-500 text-white p-4">06</div>
+        <div class="row-span-2 rounded-md bg-blue-500 text-white p-4">07</div>
+        <div class="col-span-2 rounded-md bg-blue-500 text-white p-4">08</div>
+        <div class="col-start-1 col-end-4 rounded-md bg-blue-500 text-white p-4">09</div>
+    </div>
 </body>
 </html>
